--- a/tugas2.html
+++ b/tugas2.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BLACKPINK</title>
-	<link rel="icon" href="/tugas/images/queenbp.jpg" type="jpg">
+	<link rel="icon" href="/queenbp.jpg" type="jpg">
 </head>
 <body style="background-color: lightpink;">
 	<h1 style="background-color: deeppink; color: white; text-align: center; margin-top: 60px; font-family: Old English Text MT; font-size: 50px;">Blackpink</h1>
