--- a/tugas2.html
+++ b/tugas2.html
@@ -17,34 +17,34 @@
             height: 20%; 
         }
 	</style>
-	<p style="font-family: sans-serif; margin: 30px; text-align: justify;"><img src="/tugas/images/blckpnk.avif" class="centered-image"><br>BLACKPINK terdiri dari Jennie, Jisoo, Rosé, dan Lisa. Grup ini terbentuk setelah mengikuti audisi untuk program pelatihan K-pop agensi YG Entertainment di Korea Selatan, dan memulai debutnya pada Agustus 2016 dengan 'Square One.' Grup K-pop ini merilis beberapa album singel dan EP pada tahun-tahun berikutnya, dengan EP 'SQUARE UP' tahun 2018 yang masuk dalam penghitungan semua genre di No. 40. Album studio debut 'The Album' dirilis pada Oktober 2020 dan memuncak di No. 2, sementara album kedua 'Born Pink' memulai debutnya di No. 1 pada Oktober 2022, menjadikan mereka girl group K-pop pertama yang menduduki puncak tangga lagu. BLACKPINK masuk ke Hot 100 dengan "DDU-DU DDU-DU" (dari 'Square Up') pada tahun 2018 di No. 55. Sejak menjadi bintang global, kuartet ini telah membuat sejarah dengan pencapaiannya, di antaranya menjadi artis K-pop wanita pertama yang muncul di sampul majalah Billboard, menjadi girl group K-pop pertama yang diakui oleh RIAA, grup K-pop wanita pertama yang memenangkan VMA, dan menjadi artis Asia pertama yang menjadi bintang utama Coachella pada tahun 2023. Mereka juga telah berkolaborasi dengan artis musik besar seperti Lady Gaga, Selena Gomez, dan Dua Lipa</p>
+	<p style="font-family: sans-serif; margin: 30px; text-align: justify;"><img src="/ayunda5c-tugas2/blckpnk.avif" class="centered-image"><br>BLACKPINK terdiri dari Jennie, Jisoo, Rosé, dan Lisa. Grup ini terbentuk setelah mengikuti audisi untuk program pelatihan K-pop agensi YG Entertainment di Korea Selatan, dan memulai debutnya pada Agustus 2016 dengan 'Square One.' Grup K-pop ini merilis beberapa album singel dan EP pada tahun-tahun berikutnya, dengan EP 'SQUARE UP' tahun 2018 yang masuk dalam penghitungan semua genre di No. 40. Album studio debut 'The Album' dirilis pada Oktober 2020 dan memuncak di No. 2, sementara album kedua 'Born Pink' memulai debutnya di No. 1 pada Oktober 2022, menjadikan mereka girl group K-pop pertama yang menduduki puncak tangga lagu. BLACKPINK masuk ke Hot 100 dengan "DDU-DU DDU-DU" (dari 'Square Up') pada tahun 2018 di No. 55. Sejak menjadi bintang global, kuartet ini telah membuat sejarah dengan pencapaiannya, di antaranya menjadi artis K-pop wanita pertama yang muncul di sampul majalah Billboard, menjadi girl group K-pop pertama yang diakui oleh RIAA, grup K-pop wanita pertama yang memenangkan VMA, dan menjadi artis Asia pertama yang menjadi bintang utama Coachella pada tahun 2023. Mereka juga telah berkolaborasi dengan artis musik besar seperti Lady Gaga, Selena Gomez, dan Dua Lipa</p>
 
 <h2 style="background-color: deeppink; color: white; font-family: sans-serif; text-align: center;">Blackpink Playlist</h2>
 <p style="font-family: sans-serif; margin: 30px; text-align: justify;">Berikut beberapa lagu blackpink yang pasti diketahui dan mungkin menjadi favorite oleh mereka yang non-kpop (bukan fans korean pop).
 		<ol>
 			<li><b>Boombayah<b></li>
 				<audio controls>
-					<source src="/tugas/music/boombayah.mp3" type="audio/mpeg">
+					<source src="/ayunda5c-tugas2/boombayah.mp3" type="audio/mpeg">
 				</audio>
 			<li><b>Ddu Du Ddu Du</b></li>
 				<audio controls>
-					<source src="/tugas/music/ddududdudu.mp3" type="audio/mpeg">
+					<source src="/ayunda5c-tugas2/ddududdudu.mp3" type="audio/mpeg">
 				</audio>
 			<li><b>Forever Young</b></li>
 				<audio controls>
-					<source src="/tugas/music/foreveryoung.mp3" type="audio/mpeg">
+					<source src="/ayunda5c-tugas2/foreveryoung.mp3" type="audio/mpeg">
 				</audio>
 			<li><b>Kill This Love</b></li>
 				<audio controls>
-					<source src="/tugas/music/killthislove.mp3" type="audio/mpeg">
+					<source src="/ayunda5c-tugas2/killthislove.mp3" type="audio/mpeg">
 				</audio>
 			<li><b>Ice Cream</b></li>
 				<audio controls>
-					<source src="/tugas/music/icecream.mp3" type="audio/mpeg">
+					<source src="/ayunda5c-tugas2/icecream.mp3" type="audio/mpeg">
 				</audio>
 			<li><b>Pink Venom</b></li>
 				<audio controls>
-					<source src="/tugas/music/pinkvenom.mp3" type="audio/mpeg">
+					<source src="/ayunda5c-tugas2/pinkvenom.mp3" type="audio/mpeg">
 				</audio>
 		</ol>
 	</p>
